Fixed footer again
Fixed footer position, removed bug of horizontal scrollbar always appearing

--- a/src/scripts,styles/index.css
+++ b/src/scripts,styles/index.css
@@ -36,5 +36,5 @@ main{
 }
 
 .main-content-container {
-  min-height: calc(100vh - 180px)
+  min-height: calc(100vh - 161px)
 }
